--- a/practice_jung/02_let_const/02.html
+++ b/practice_jung/02_let_const/02.html
@@ -6,10 +6,19 @@
     <!-- <script src="let-1.js" defer></script> <!-- let-1 -->
     <!-- <script src="let-2.js" defer></script> <!-- let-2 -->
     <!-- <script src="let-3.js" defer></script> <!-- let-3 -->
-    <script src="let-this.js" defer></script> <!-- let-this -->
+    <!-- <script src="let-this.js" defer></script> <!-- let-this -->
     <!-- <script src="let-function.js" defer></script> <!-- let-function -->
     <!-- <script src="let-function-this.js" defer></script> <!-- let-function-this -->
+    <!-- <script src="let-try.js" defer></script> <!-- let-try -->
+    <!-- <script src="let-switch.js" defer></script> <!-- let-switch -->
+    <!--<script src="let-hosting.js" defer></script> <!-- let-hosting -->
+    <script src="let-for-var.js" defer></script> <!-- let-for-var -->
 </head>
 <body>
+    <ul>
+        <li>1~10</li>
+        <li>11~20</li>
+        <li>21~30</li>
+    </ul>
 </body>
 </html>
